{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 10628,
  "lineage": "7533d789-0b13-1942-6022-bc3628f068e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dr_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03112bd782fe5b49b",
            "arn": "arn:aws:ec2:us-west-1:904233103130:elastic-ip/eipalloc-03112bd782fe5b49b",
            "association_id": "eipassoc-0a3152e6cc9efdf57",
            "domain": "vpc",
            "id": "eipalloc-03112bd782fe5b49b",
            "network_border_group": "us-west-1",
            "network_interface": "eni-049a1e0457ded863c",
            "private_dns": "ip-172-20-1-143.us-west-1.compute.internal",
            "private_ip": "172.20.1.143",
            "public_dns": "ec2-52-53-113-96.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.113.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-dr-nat"
            },
            "tags_all": {
              "Name": "eip-dr-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prod_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a04d47a755235476",
            "arn": "arn:aws:ec2:us-east-1:904233103130:elastic-ip/eipalloc-0a04d47a755235476",
            "association_id": "eipassoc-09edc544ccc97eb76",
            "domain": "vpc",
            "id": "eipalloc-0a04d47a755235476",
            "network_border_group": "us-east-1",
            "network_interface": "eni-052e5b4475349c737",
            "private_dns": "ip-172-20-1-206.ec2.internal",
            "private_ip": "172.20.1.206",
            "public_dns": "ec2-13-223-217-43.compute-1.amazonaws.com",
            "public_ip": "13.223.217.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-prod-nat"
            },
            "tags_all": {
              "Name": "eip-prod-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:904233103130:instance/i-04185d6b23111fe2b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04185d6b23111fe2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0750846b6e85052b4",
            "private_dns": "ip-172-20-2-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.2.210",
            "public_dns": "ec2-13-222-29-205.compute-1.amazonaws.com",
            "public_ip": "13.222.29.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a3f764b7043625c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bb20a19cfec70e7",
            "tags": {
              "Name": "linux-backend-est-1"
            },
            "tags_all": {
              "Name": "linux-backend-est-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e5cebd51202b29d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_east",
            "aws_security_group.web_sg_east",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_ami.ubuntu_east",
            "tls_private_key.auto"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddac4b9aed8d5d46",
            "arn": "arn:aws:ec2:us-west-1:904233103130:instance/i-02727b1db46e5d192",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02727b1db46e5d192",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-031aeb1c6a3c42b02",
            "private_dns": "ip-172-20-2-14.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.2.14",
            "public_dns": "ec2-52-53-193-48.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.193.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c016488aa37ff10e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f044ae531bcfa216",
            "tags": {
              "Name": "linux-backend-west-1"
            },
            "tags_all": {
              "Name": "linux-backend-west-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f194bb964831cfb9"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_west",
            "aws_security_group.web_sg_west",
            "aws_subnet.dr",
            "aws_vpc.dr",
            "data.aws_ami.ubuntu_west",
            "tls_private_key.auto"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bbdd8c17ed981ef9",
            "arn": "arn:aws:ec2:us-east-1:904233103130:instance/i-0b8d93ad83bcc1273",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b8d93ad83bcc1273",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d4eec37b1f70a10",
            "private_dns": "ip-172-20-1-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.51",
            "public_dns": "ec2-34-237-137-172.compute-1.amazonaws.com",
            "public_ip": "34.237.137.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04df9496e68ecce52",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f19dadbb9220602",
            "tags": {
              "Name": "linux-frontend-east-1"
            },
            "tags_all": {
              "Name": "linux-frontend-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e5cebd51202b29d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_east",
            "aws_security_group.web_sg_east",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_ami.ubuntu_east",
            "tls_private_key.auto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ddac4b9aed8d5d46",
            "arn": "arn:aws:ec2:us-west-1:904233103130:instance/i-0613ce9097ebf3006",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0613ce9097ebf3006",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "temp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-029d9ded4fda876de",
            "private_dns": "ip-172-20-1-199.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.199",
            "public_dns": "ec2-54-67-17-205.us-west-1.compute.amazonaws.com",
            "public_ip": "54.67.17.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099c614c575361624",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033967a41a1974b33",
            "tags": {
              "Name": "linux-frontend-west-1"
            },
            "tags_all": {
              "Name": "linux-frontend-west-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f194bb964831cfb9"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer_west",
            "aws_security_group.web_sg_west",
            "aws_subnet.dr",
            "aws_vpc.dr",
            "data.aws_ami.ubuntu_west",
            "tls_private_key.auto"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dr_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:internet-gateway/igw-07f03b628240c4cd4",
            "id": "igw-07f03b628240c4cd4",
            "owner_id": "904233103130",
            "tags": {
              "Name": "igw-dr"
            },
            "tags_all": {
              "Name": "igw-dr"
            },
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:internet-gateway/igw-0de4dac2a3db67999",
            "id": "igw-0de4dac2a3db67999",
            "owner_id": "904233103130",
            "tags": {
              "Name": "igw-prod"
            },
            "tags_all": {
              "Name": "igw-prod"
            },
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-backend/29774444751e0541",
            "arn_suffix": "app/ALB-backend/29774444751e0541",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ALB-backend-1169882947.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-backend/29774444751e0541",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-backend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a09da57e28a3ebf7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bb20a19cfec70e7"
              },
              {
                "subnet_id": "subnet-02f19dadbb9220602"
              }
            ],
            "subnets": [
              "subnet-00bb20a19cfec70e7",
              "subnet-02f19dadbb9220602"
            ],
            "tags": {
              "Name": "backend-alb"
            },
            "tags_all": {
              "Name": "backend-alb"
            },
            "vpc_id": "vpc-0616cb961971eecb0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.backend_alb",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-frontend/48ea3f396c71dd35",
            "arn_suffix": "app/ALB-frontend/48ea3f396c71dd35",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-frontend-1151473620.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-frontend/48ea3f396c71dd35",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-frontend",
            "preserve_host_header": false,
            "security_groups": [
              "sg-024861a11acfe13a2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bb20a19cfec70e7"
              },
              {
                "subnet_id": "subnet-02f19dadbb9220602"
              }
            ],
            "subnets": [
              "subnet-00bb20a19cfec70e7",
              "subnet-02f19dadbb9220602"
            ],
            "tags": {
              "Name": "frontend-alb"
            },
            "tags_all": {
              "Name": "frontend-alb"
            },
            "vpc_id": "vpc-0616cb961971eecb0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_frontend_sg",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-backend/29774444751e0541/96cc42d7b8a67a3a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/24de93c4067142c3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-backend/29774444751e0541/96cc42d7b8a67a3a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-backend/29774444751e0541",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.backend_alb",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.backend_alb",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-frontend/48ea3f396c71dd35/c0d6bcdde63bc4e0",
            "certificate_arn": "arn:aws:acm:us-east-1:904233103130:certificate/d15ee983-4e95-4b19-a0f8-87e40a27af83",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/07e2026d89c8240f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-frontend/48ea3f396c71dd35/c0d6bcdde63bc4e0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-frontend/48ea3f396c71dd35",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.alb_origin_cert",
            "aws_acm_certificate_validation.alb_origin_cert",
            "aws_lb.frontend_alb",
            "aws_lb_target_group.frontend_tg",
            "aws_route53_record.alb_origin_cert_validation",
            "aws_security_group.alb_frontend_sg",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_route53_zone.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-frontend/48ea3f396c71dd35/45214ca758ce3b25",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/07e2026d89c8240f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:listener/app/ALB-frontend/48ea3f396c71dd35/45214ca758ce3b25",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-frontend/48ea3f396c71dd35",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frontend_alb",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_frontend_sg",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/24de93c4067142c3",
            "arn_suffix": "targetgroup/ALB-backend-TG/24de93c4067142c3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/24de93c4067142c3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-backend/29774444751e0541"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-backend-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/07e2026d89c8240f",
            "arn_suffix": "targetgroup/ALB-frontend-TG/07e2026d89c8240f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/07e2026d89c8240f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:904233103130:loadbalancer/app/ALB-frontend/48ea3f396c71dd35"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-frontend-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_backend_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:904233103130:targetgroup/tg-backend-dr/3c20fa4699092e4f",
            "arn_suffix": "targetgroup/tg-backend-dr/3c20fa4699092e4f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:904233103130:targetgroup/tg-backend-dr/3c20fa4699092e4f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-backend-dr",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_frontend_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:904233103130:targetgroup/tg-frontend-dr/386c0d06602accd5",
            "arn_suffix": "targetgroup/tg-frontend-dr/386c0d06602accd5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:904233103130:targetgroup/tg-frontend-dr/386c0d06602accd5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-frontend-dr",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/24de93c4067142c3-20250828105054019600000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-backend-TG/24de93c4067142c3",
            "target_id": "i-04185d6b23111fe2b"
          },
          "dependencies": [
            "aws_instance.backend_east",
            "aws_key_pair.deployer_east",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.web_sg_east",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_ami.ubuntu_east",
            "tls_private_key.auto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/07e2026d89c8240f-20250828105053547500000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:904233103130:targetgroup/ALB-frontend-TG/07e2026d89c8240f",
            "target_id": "i-0b8d93ad83bcc1273"
          },
          "dependencies": [
            "aws_instance.frontend_east",
            "aws_key_pair.deployer_east",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.web_sg_east",
            "aws_subnet.prod",
            "aws_vpc.prod",
            "data.aws_ami.ubuntu_east",
            "tls_private_key.auto"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dr_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03112bd782fe5b49b",
            "association_id": "eipassoc-0a3152e6cc9efdf57",
            "connectivity_type": "public",
            "id": "nat-0a712026368b4c9e7",
            "network_interface_id": "eni-049a1e0457ded863c",
            "private_ip": "172.20.1.143",
            "public_ip": "52.53.113.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033967a41a1974b33",
            "tags": {
              "Name": "nat-dr"
            },
            "tags_all": {
              "Name": "nat-dr"
            }
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a04d47a755235476",
            "association_id": "eipassoc-09edc544ccc97eb76",
            "connectivity_type": "public",
            "id": "nat-090b88c2dcdce87a1",
            "network_interface_id": "eni-052e5b4475349c737",
            "private_ip": "172.20.1.206",
            "public_ip": "13.223.217.43",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f19dadbb9220602",
            "tags": {
              "Name": "nat-prod"
            },
            "tags_all": {
              "Name": "nat-prod"
            }
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:route-table/rtb-0b5be43834b1e3cbc",
            "id": "rtb-0b5be43834b1e3cbc",
            "owner_id": "904233103130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a712026368b4c9e7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-dr-private"
            },
            "tags_all": {
              "Name": "rt-dr-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:route-table/rtb-05eba63b967a8200b",
            "id": "rtb-05eba63b967a8200b",
            "owner_id": "904233103130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f03b628240c4cd4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-dr-public"
            },
            "tags_all": {
              "Name": "rt-dr-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dr_igw",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:route-table/rtb-0dd694f379ec9cd7b",
            "id": "rtb-0dd694f379ec9cd7b",
            "owner_id": "904233103130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-090b88c2dcdce87a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-prod-private"
            },
            "tags_all": {
              "Name": "rt-prod-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:route-table/rtb-064120e33e665f279",
            "id": "rtb-064120e33e665f279",
            "owner_id": "904233103130",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de4dac2a3db67999",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-prod-public"
            },
            "tags_all": {
              "Name": "rt-prod-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_priv_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "pri-sub-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041c2dfbcc2f703d0",
            "route_table_id": "rtb-0b5be43834b1e3cbc",
            "subnet_id": "subnet-090d21b6d12cc7feb"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-4b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029df16e3d44e364b",
            "route_table_id": "rtb-0b5be43834b1e3cbc",
            "subnet_id": "subnet-0eac5301cb27a94c3"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-5a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaeafd3a76e06435",
            "route_table_id": "rtb-0b5be43834b1e3cbc",
            "subnet_id": "subnet-0453989d7b6662309"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-6b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d22a77212af50272",
            "route_table_id": "rtb-0b5be43834b1e3cbc",
            "subnet_id": "subnet-01720fd6954f9aa63"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-7a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c656c9528fe989b",
            "route_table_id": "rtb-0b5be43834b1e3cbc",
            "subnet_id": "subnet-0a576b5b1c8d71c39"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pri-sub-8b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de4cd451a86a735e",
            "route_table_id": "rtb-0b5be43834b1e3cbc",
            "subnet_id": "subnet-09afe725e38625beb"
          },
          "dependencies": [
            "aws_eip.dr_nat_eip",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "pub-sub-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7e7ad515b184b50",
            "route_table_id": "rtb-05eba63b967a8200b",
            "subnet_id": "subnet-033967a41a1974b33"
          },
          "dependencies": [
            "aws_internet_gateway.dr_igw",
            "aws_route_table.dr_public_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        },
        {
          "index_key": "pub-sub-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022dc4a9e48d4c4c2",
            "route_table_id": "rtb-05eba63b967a8200b",
            "subnet_id": "subnet-0f044ae531bcfa216"
          },
          "dependencies": [
            "aws_internet_gateway.dr_igw",
            "aws_route_table.dr_public_rt",
            "aws_subnet.dr",
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_priv_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "pri-sub-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061f5bafcaca0d231",
            "route_table_id": "rtb-0dd694f379ec9cd7b",
            "subnet_id": "subnet-0374da6d909e5409b"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-4b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cbf0f2d6a0c49dd",
            "route_table_id": "rtb-0dd694f379ec9cd7b",
            "subnet_id": "subnet-0838c56a38ae51953"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-5a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0516b4b4141fb3df7",
            "route_table_id": "rtb-0dd694f379ec9cd7b",
            "subnet_id": "subnet-0b0e42e3d100d3d4d"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-6b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c255a3f306a370b7",
            "route_table_id": "rtb-0dd694f379ec9cd7b",
            "subnet_id": "subnet-02aa184aa0fd51304"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-7a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0030f5a4c27d46081",
            "route_table_id": "rtb-0dd694f379ec9cd7b",
            "subnet_id": "subnet-0ca6c816b7c5840eb"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pri-sub-8b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df25225c25589f98",
            "route_table_id": "rtb-0dd694f379ec9cd7b",
            "subnet_id": "subnet-058ca83a5361fb062"
          },
          "dependencies": [
            "aws_eip.prod_nat_eip",
            "aws_internet_gateway.prod_igw",
            "aws_nat_gateway.prod_nat",
            "aws_route_table.prod_private_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "pub-sub-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0193b09b07192d3c6",
            "route_table_id": "rtb-064120e33e665f279",
            "subnet_id": "subnet-02f19dadbb9220602"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_public_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        },
        {
          "index_key": "pub-sub-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0291f26d63099cf52",
            "route_table_id": "rtb-064120e33e665f279",
            "subnet_id": "subnet-00bb20a19cfec70e7"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_public_rt",
            "aws_subnet.prod",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend_dr_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-0e7235c6783ad7dab",
            "description": "Allow HTTP/HTTPS to frontend ALB in DR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7235c6783ad7dab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-frontend-dr-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-dr-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-dr-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-024861a11acfe13a2",
            "description": "Allow HTTP/HTTPS for frontend ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024861a11acfe13a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0a09da57e28a3ebf7",
            "description": "Allow HTTP/HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a09da57e28a3ebf7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "backend-alb-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-066dcd556c68c2299",
            "description": "Allow HTTP from backend ALB and SSH from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066dcd556c68c2299",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB Backend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a09da57e28a3ebf7"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056fac8d630378e2c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend-ec2-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend_alb",
            "aws_security_group.bastion",
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_ec2_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-0e6d661d93edac55b",
            "description": "Allow HTTP and SSH (DR)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6d661d93edac55b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend-ec2-dr-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-056fac8d630378e2c",
            "description": "SSH access only from trusted IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056fac8d630378e2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from admin IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-06e69df4b2b7b5117",
            "description": "Allow HTTP/HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e69df4b2b7b5117",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "frontend-alb-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-018d8aed8ad6a21a5",
            "description": "Allow HTTP from frontend ALB and SSH from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018d8aed8ad6a21a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB Frontend",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e69df4b2b7b5117"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056fac8d630378e2c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend-ec2-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.frontend_alb",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_ec2_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-01dcb5e13e3d17f6b",
            "description": "Allow HTTP and SSH (DR)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01dcb5e13e3d17f6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend-ec2-dr-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0d6a7b1c179afad1e",
            "description": "Allow MySQL/Aurora from backend EC2 only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6a7b1c179afad1e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from Backend EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-066dcd556c68c2299"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend_alb",
            "aws_security_group.backend_ec2",
            "aws_security_group.bastion",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-09f6cab5596c1a2ff",
            "description": "Allow MySQL/Aurora in DR",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f6cab5596c1a2ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL ingress (adjust later)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-dr-sg",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-dr-sg"
            },
            "tags_all": {
              "Name": "rds-dr-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:security-group/sg-0e5cebd51202b29d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5cebd51202b29d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "temp-web-sg-east",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:security-group/sg-0f194bb964831cfb9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic out",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f194bb964831cfb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "temp-web-sg-west",
            "name_prefix": "",
            "owner_id": "904233103130",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_to_frontend_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-858292553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-018d8aed8ad6a21a5",
            "security_group_rule_id": "sgr-086b608f018bb6d1c",
            "self": false,
            "source_security_group_id": "sg-024861a11acfe13a2",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_frontend_sg",
            "aws_security_group.bastion",
            "aws_security_group.frontend_alb",
            "aws_security_group.frontend_ec2",
            "aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": "pri-sub-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-090d21b6d12cc7feb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090d21b6d12cc7feb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-3a",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "pri-sub-3a",
              "Tier": "web"
            },
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-4b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-0eac5301cb27a94c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eac5301cb27a94c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-4b",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "pri-sub-4b",
              "Tier": "web"
            },
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-5a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-0453989d7b6662309",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0453989d7b6662309",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-5a",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "pri-sub-5a",
              "Tier": "app"
            },
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-6b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-01720fd6954f9aa63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01720fd6954f9aa63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-6b",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "pri-sub-6b",
              "Tier": "app"
            },
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-7a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-0a576b5b1c8d71c39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a576b5b1c8d71c39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-7a",
              "Tier": "db"
            },
            "tags_all": {
              "Name": "pri-sub-7a",
              "Tier": "db"
            },
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-8b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-09afe725e38625beb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09afe725e38625beb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-8b",
              "Tier": "db"
            },
            "tags_all": {
              "Name": "pri-sub-8b",
              "Tier": "db"
            },
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pub-sub-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-033967a41a1974b33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033967a41a1974b33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-1a",
              "Tier": "alb"
            },
            "tags_all": {
              "Name": "pub-sub-1a",
              "Tier": "alb"
            },
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pub-sub-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:subnet/subnet-0f044ae531bcfa216",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f044ae531bcfa216",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-2b",
              "Tier": "alb"
            },
            "tags_all": {
              "Name": "pub-sub-2b",
              "Tier": "alb"
            },
            "vpc_id": "vpc-04499c61e37b853ae"
          },
          "dependencies": [
            "aws_vpc.dr"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "index_key": "pri-sub-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0374da6d909e5409b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0374da6d909e5409b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-3a",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "pri-sub-3a",
              "Tier": "web"
            },
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-4b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0838c56a38ae51953",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0838c56a38ae51953",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-4b",
              "Tier": "web"
            },
            "tags_all": {
              "Name": "pri-sub-4b",
              "Tier": "web"
            },
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-5a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0b0e42e3d100d3d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0e42e3d100d3d4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-5a",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "pri-sub-5a",
              "Tier": "app"
            },
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-6b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-02aa184aa0fd51304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02aa184aa0fd51304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-6b",
              "Tier": "app"
            },
            "tags_all": {
              "Name": "pri-sub-6b",
              "Tier": "app"
            },
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-7a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-0ca6c816b7c5840eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca6c816b7c5840eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-7a",
              "Tier": "db"
            },
            "tags_all": {
              "Name": "pri-sub-7a",
              "Tier": "db"
            },
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pri-sub-8b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-058ca83a5361fb062",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058ca83a5361fb062",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-8b",
              "Tier": "db"
            },
            "tags_all": {
              "Name": "pri-sub-8b",
              "Tier": "db"
            },
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pub-sub-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-02f19dadbb9220602",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f19dadbb9220602",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-1a",
              "Tier": "alb"
            },
            "tags_all": {
              "Name": "pub-sub-1a",
              "Tier": "alb"
            },
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "pub-sub-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:subnet/subnet-00bb20a19cfec70e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bb20a19cfec70e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "904233103130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-2b",
              "Tier": "alb"
            },
            "tags_all": {
              "Name": "pub-sub-2b",
              "Tier": "alb"
            },
            "vpc_id": "vpc-0616cb961971eecb0"
          },
          "dependencies": [
            "aws_vpc.prod"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:904233103130:vpc/vpc-04499c61e37b853ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-079f0dd312d86a82e",
            "default_route_table_id": "rtb-0ee0077afccc58018",
            "default_security_group_id": "sg-0881763dbfa0e192e",
            "dhcp_options_id": "dopt-065c4e5d6dbe2919e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04499c61e37b853ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee0077afccc58018",
            "owner_id": "904233103130",
            "tags": {
              "Name": "vpc-dr"
            },
            "tags_all": {
              "Name": "vpc-dr"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904233103130:vpc/vpc-0616cb961971eecb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-051bf0fc126dd0a12",
            "default_route_table_id": "rtb-006437fb42688a38a",
            "default_security_group_id": "sg-07d3b02cb89a45c09",
            "dhcp_options_id": "dopt-0cb33106507678f7a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0616cb961971eecb0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006437fb42688a38a",
            "owner_id": "904233103130",
            "tags": {
              "Name": "vpc-prod"
            },
            "tags_all": {
              "Name": "vpc-prod"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}